# llm-knowledge-base

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  LLM_지식베이스_기획서.md  Makefile  README.md  handoff.md  pyproject.toml  start.sh  stop.sh  task.md
config/: ontology_schema.yaml  prompts.yaml  settings.yaml
docs/: O6_O7_테스트_가이드.md
scripts/: api_server.py  cache.py  chunking.py  cli.py  compile.py  concept_compiler.py  concept_extractor.py  concept_graph.py  concept_normalizer.py  constants.py  exploration.py  graph_db.py  graph_loader.py  incremental.py  index_updater.py  ingest_excel.py  ingest_github.py  ingest_image.py  ingest_pdf.py  ingest_ppt.py  ingest_text.py  ingest_web.py  ingest_word.py  ingest_youtube.py  llm.py  mcp_server.py  ontology_analyzer.py  ontology_extractor.py  org.py  perf.py  query.py  search_index.py  share.py  team.py  test_mvp.py  token_counter.py  utils.py  verify_obsidian.py  wiki_delete.py  wiki_git.py
systemd/: kb-watch.service  kb-web.service
tests/: conftest.py  test_chunking.py  test_compile.py  test_exploration.py  test_integration.py  test_query.py  test_token_counter.py
web/: .gitignore  next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/(clipper)/: layout.tsx
web/components/: ConceptGraph.tsx  MarkdownRenderer.tsx  RawEditor.tsx  ShareButton.tsx  SwRegister.tsx
web/lib/: wiki.ts
web/public/: manifest.json  sw.js
wiki/: OBSIDIAN_SETUP.md  _index.md  _summaries.md  gaps.md
wiki/.obsidian/: app.json  graph.json
wiki/concepts/: LLM_지식베이스_시스템.md
(+23 files in other folders)
